--- a/eCommerce/eCommerce/eCommerce.Client/eCommerce.Client.csproj
+++ b/eCommerce/eCommerce/eCommerce.Client/eCommerce.Client.csproj
@@ -8,8 +8,8 @@
     <ProjectGuid>{11B07D74-7973-4713-9614-87D31A5EC6EB}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>eCommerce.Core</RootNamespace>
-    <AssemblyName>eCommerce.Core</AssemblyName>
+    <RootNamespace>eCommerce.Client</RootNamespace>
+    <AssemblyName>eCommerce.Client</AssemblyName>
     <DefaultLanguage>en-US</DefaultLanguage>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{786C830F-07A1-408B-BD7F-6EE04809D6DB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -37,11 +37,11 @@
     <!-- A reference to the entire .NET Framework is automatically included -->
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Models\Category.cs" />
-    <Compile Include="Models\Product.cs" />
+    <Compile Include="Objects\Category.cs" />
+    <Compile Include="Objects\Product.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Repositories\CategoryRepository.cs" />
-    <Compile Include="Repositories\ProductRepository.cs" />
+    <Compile Include="Managers\CategoryManager.cs" />
+    <Compile Include="Managers\ProductManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
