--- a/eCommerce/eCommerce/eCommerce/eCommerce.csproj
+++ b/eCommerce/eCommerce/eCommerce/eCommerce.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Pages\SearchNavigationPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pages\SearchPage.cs" />
+    <Compile Include="Viewes\InfoView.cs" />
     <Compile Include="Viewes\ProductCell.cs" />
   </ItemGroup>
   <ItemGroup>
