--- a/eCommerce/eCommerce/eCommerce.iOS/eCommerce.iOS.csproj
+++ b/eCommerce/eCommerce/eCommerce.iOS/eCommerce.iOS.csproj
@@ -173,6 +173,15 @@
   <ItemGroup>
     <BundleResource Include="Resources\info%403x.png" />
   </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\backspace.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\backspace%402x.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\backspace%403x.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <Import Project="..\..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets" Condition="Exists('..\..\packages\Xamarin.Forms.1.3.3.6323\build\portable-win+net45+wp80+MonoAndroid10+MonoTouch10+Xamarin.iOS10\Xamarin.Forms.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
