--- a/eCommerce/eCommerce/eCommerce/eCommerce.csproj
+++ b/eCommerce/eCommerce/eCommerce/eCommerce.csproj
@@ -38,6 +38,7 @@
     <Compile Include="Converters\PathToImageSourceConverter.cs" />
     <Compile Include="Enums\CatalogPageType.cs" />
     <Compile Include="Extensions\ObservableCollectionExtensions.cs" />
+    <Compile Include="Pages\CartNavigationPage.cs" />
     <Compile Include="Pages\CartPage.cs" />
     <Compile Include="Pages\CatalogNavigationPage.cs" />
     <Compile Include="Pages\CatalogPage.cs" />
@@ -50,6 +51,7 @@
     <Compile Include="Pages\SearchNavigationPage.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Pages\SearchPage.cs" />
+    <Compile Include="Viewes\CartCell.cs" />
     <Compile Include="Viewes\InfoView.cs" />
     <Compile Include="Viewes\ProductCell.cs" />
   </ItemGroup>
