--- a/eCommerce/eCommerce/eCommerce/packages.config
+++ b/eCommerce/eCommerce/eCommerce/packages.config
@@ -1,4 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="sqlite-net-pcl" version="1.0.11" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
+  <package id="SQLitePCL.raw_basic" version="0.7.1" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
   <package id="Xamarin.Forms" version="1.5.0.6446" targetFramework="portable-net45+win+MonoAndroid10+xamarinios10+MonoTouch10" />
 </packages>
