--- a/eCommerce/eCommerce/eCommerce.Droid/packages.config
+++ b/eCommerce/eCommerce/eCommerce.Droid/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="sqlite-net-pcl" version="1.0.11" targetFramework="MonoAndroid50" />
+  <package id="SQLitePCL.raw_basic" version="0.7.1" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Android.Support.v4" version="22.2.1.0" targetFramework="MonoAndroid50" />
   <package id="Xamarin.Forms" version="1.5.0.6446" targetFramework="MonoAndroid50" />
 </packages>
