--- a/eCommerce/eCommerce/eCommerce.iOS/eCommerce.iOS.csproj
+++ b/eCommerce/eCommerce/eCommerce.iOS/eCommerce.iOS.csproj
@@ -89,7 +89,9 @@
   <ItemGroup>
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
+    <Compile Include="Renderers\InfoViewRenderer.cs" />
     <Compile Include="SQLite_iOS.cs" />
+    <Compile Include="Views\PaddedUIView.cs" />
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
