--- a/eCommerce/eCommerce/eCommerce.Droid/eCommerce.Droid.csproj
+++ b/eCommerce/eCommerce/eCommerce.Droid/eCommerce.Droid.csproj
@@ -88,6 +88,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
+    <Compile Include="Renderers\InfoPageRenderer.cs" />
+    <Compile Include="Renderers\InfoViewRenderer.cs" />
     <Compile Include="Resources\Resource.Designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SQLite_Android.cs" />
@@ -96,6 +98,9 @@
     <None Include="packages.config" />
     <None Include="Resources\AboutResources.txt" />
     <None Include="Assets\AboutAssets.txt" />
+    <AndroidResource Include="Resources\layout\InfoPageLayout.axml">
+      <SubType>AndroidResource</SubType>
+    </AndroidResource>
   </ItemGroup>
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\icon.png" />
